--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Users/access.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Users/access.html.twig
@@ -9,13 +9,11 @@
 <script type="text/javascript" src="{{ asset('expediente/js/jquery.hotkeys.js') }}"></script>
 
 <script type="text/javascript">
-    Tecnotek.UI.urls["api"] = "";
-    Tecnotek.UI.translates["btnDone"] = "";
     Tecnotek.module = "permisosUsuarios";
     Tecnotek.imagesURL = "/images";
     Tecnotek.assetsURL = "{{ path('TecnotekExpedienteBundle_homepage')}}";
-    Tecnotek.UI.urls["show"] = "{{ path('_expediente_sysadmin_coordinador_show_simple')}}";
-
+    Tecnotek.UI.urls["savePrivilegesURL"] = "{{ path('_expediente_access_save')}}";
+    Tecnotek.UI.urls["getPrivilegesURL"] = "{{ path('_expediente_load_privileges')}}";
 </script>
 {% endblock %}
 
@@ -40,7 +38,7 @@
             </select>
         </div>
 
-        <div class="right" style="width: 500px">
+        <div class="right" style="width: 500px; display: none;" id="privilegesContainer" name="privilegesContainer">
             <div class="row tableHeader">
                 <div class="option_width" style="float: left; width: 300px;">{% trans %}label.access{% endtrans %}</div>
             </div>
@@ -48,13 +46,13 @@
             <div id="demo1" class="demo" style="height:100%;">
                 <ul>
                     {% for permiso in permisos %}
-                    <li id="{{ permiso.id }}">
+                    <li id="{{ permiso.id }}" name="{{ permiso.id }}">
                         <a href="#">{{ permiso }}</a>
 
                         {% if permiso.childrens|length > 0 %}
                         <ul>
                             {% for children in permiso.childrens %}
-                            <li id="{{ children.id }}">
+                            <li id="{{ children.id }}" name="{{ children.id }}">
                                 <a href="#">{{ children }}</a>
                             </li>
                             {% endfor %}
