--- a/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/qualifications.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/qualifications.html.twig
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="{{ asset('expediente/js/spin.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('expediente/js/jquery.spin.js') }}"></script>
     <script type="text/javascript" src="{{ asset('expediente/js/teacher_application.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('expediente/js/jquery.printElement.min.js') }}"></script>
 
     <style type="text/css">
         body{padding:0px; font-size:14px; color:#000000; font-family:Arial, Helvetica, sans-serif; background-color:#b0c4de; margin: 0px;}
@@ -25,28 +26,32 @@
             vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black; border-top: solid thin black;}
 
         .qualificationTable{ /*margin-top: 75px;*/ margin-bottom: 50px;  font-size: 10px;}
-        .qualificationTable .itemNota{ background-color: #A4D2FD; font-size: 10px; }
-        .qualificationTable .itemPromedio{ background-color: #5F96E7;  font-size: 10px; }
-        .qualificationTable .itemPorcentage{ background-color: #B698EE;  font-size: 10px; }
+        .qualificationTable .itemNota{ background-color: #A4D2FD; font-size: 14px; }
+        .qualificationTable .itemPromedio{ background-color: #5F96E7;  font-size: 14px; width: 44px; }
+        .qualificationTable .itemPorcentage{ background-color: #B698EE;  font-size: 14px; width: 44px; }
         .qualificationTable .itemPromedioPeriodo{ background-color: #2b34ee; color: #fff; font-weight: bold;}
-        .qualificationTable .itemHeader {font-weight: bold; color: #000;
+        .qualificationTable .itemHeader {font-weight: bold; color: #000; font-size: 10px;
             position: absolute;
-            text-align: center; float: left; width: 150px; height: 32px; line-height: 32px; vertical-align: middle;
-            border: solid thin black; top: 60px;
+            text-align: center; float: left; width: 150px; height: 45px; line-height: 40px; vertical-align: middle;
+            border: solid thin black; top: 54px;
             -moz-transform: rotate(90deg);  /* FF3.5+ */
             -o-transform: rotate(90deg);  /* Opera 10.5 */
             -webkit-transform: rotate(90deg);  /* Saf3.1+, Chrome */
             filter:  progid:DXImageTransform.Microsoft.BasicImage(rotation=0.90);  /* IE6,IE7 */
             -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=0.90)"; /* IE8 */
         }
-        .itemHeaderCode {font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 32px; height: 25px; line-height: 25px;
+        .itemHeaderCode {font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 40px; height: 25px; line-height: 25px;
             vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black; border-top: solid thin black;}
 
         .qualificationTable .itemHeader2 {font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 32px; height: 25px; line-height: 25px;
             vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black;}
 
-        .qualificationTable .textField {font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 18px; height: 11px; line-height: 11px;
-            vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black; border-top: solid thin black; font-size: 10px;}
+        .qualificationTable .textField {font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 30px; height: 11px; line-height: 11px;
+            vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black; border-top: solid thin black; font-size: 14px;}
+
+        .qualificationTable .codeNota{ width: 44px; }
+        .qualificationTable .codePromedio{ width: 44px; }
+        .qualificationTable .codePorcentage{ width: 44px;}
     </style>
 
     <script type="text/javascript">
@@ -199,7 +204,7 @@
 
         <div class="centeredDiv">
             <div id="studentsTableContainer" name="studentsTableContainer" class="formContainer" style="width: 100%; height: 650px; padding: 0px;">
-                <div id="showContainer">
+                <div id="showContainer" style="width: 100%">
                     <div style="margin-bottom: 15px;">
                         <div class="left" style="width: 60px; font-weight: bold;">{%trans%}label.period{%endtrans%}</div>
                         <div id="labelPeriod" class="left">
@@ -226,6 +231,9 @@
                             </div>
                         </div>
 
+                        <button style="margin-left: 15px; margin-top: 0px;" type="button" class="left btn print" id="btnPrint" name="btnPrint" rel="Notas de Grupo"><span></span>{% trans %}label.print{% endtrans %}</button>
+
+
                         <div class="clear"></div>
                     </div>
                     <!-- Qualifications -->
@@ -240,8 +248,8 @@
                     </div>
                     <div class="clear"></div>
 
-                    <div id="tableContainer" name="tableContainer" style="display: none;">
-                        <div class="left" style="width: 225px; position: relative; height: 286px;">
+                    <div id="tableContainer" name="tableContainer" style="display: none; width: 2000px;">
+                        <div class="left" style="width: 225px; height: 286px;">
                             <div class="itemCarne"></div><div class="itemEstudiante"></div><div class="clear"></div>
 
                             <div class="itemCarne" style="height: 150px; line-height: 150px;"></div><div class="itemEstudiante"  style="height: 150px; line-height: 150px;"></div><div class="clear"></div>
@@ -250,7 +258,7 @@
 
                             <div  name="studentsHeader" id="studentsHeader"></div>
                         </div>
-                        <div class="left qualificationTable" style="position: relative;">
+                        <div class="left qualificationTable" style="width: 1750px;">
                             <div  name="contentBody" id="contentBody"></div>
                             <div class="clear"></div>
                         </div>
