--- a/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/qualifications.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/qualifications.html.twig
@@ -22,7 +22,8 @@
     <style>
         .itemCarne{ background-color: #82c0fd; width: 75px; color: #000; float: left; font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; height: 25px; line-height: 25px;
             vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black; border-top: solid thin black; }
-        .itemEstudiante{ font-size: 8px; background-color: #A4D2FD; color: #000; font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 146px; height: 25px; line-height: 25px;
+        .itemEstudiante{ font-size: 8px; background-color: #A4D2FD; color: #000; font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 195px;
+            height: 25px; line-height: 25px; z-index: 999;
             vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black; border-top: solid thin black;}
 
         .qualificationTable{ /*margin-top: 75px;*/ margin-bottom: 50px;  font-size: 10px;}
@@ -249,7 +250,7 @@
                     <div class="clear"></div>
 
                     <div id="tableContainer" name="tableContainer" style="display: none; width: 2000px;">
-                        <div class="left" style="width: 225px; height: 286px;">
+                        <div class="left" style="width: 275px; height: 286px;">
                             <div class="itemCarne"></div><div class="itemEstudiante"></div><div class="clear"></div>
 
                             <div class="itemCarne" style="height: 150px; line-height: 150px;"></div><div class="itemEstudiante"  style="height: 150px; line-height: 150px;"></div><div class="clear"></div>
@@ -258,7 +259,7 @@
 
                             <div  name="studentsHeader" id="studentsHeader"></div>
                         </div>
-                        <div class="left qualificationTable" style="width: 1750px;">
+                        <div class="left qualificationTable">
                             <div  name="contentBody" id="contentBody"></div>
                             <div class="clear"></div>
                         </div>
