--- a/web/expediente/css/tabs.css
+++ b/web/expediente/css/tabs.css
@@ -1,9 +1,32 @@
+.clearfix:after {
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
+}
+
+.clearfix {
+    /*display: inline-block;*/
+    zoom:1;
+}
+
+html[xmlns] .clearfix {
+    display: block;
+}
+
+* html .clearfix {
+    height: 1%;
+}
+
+/*--------------------------------------------------------------------------------*/
 #tabs {
     border: 1px solid #DEDEDE;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    height: 400px;
+    /*height: 400px;*/
     position: relative;
     overflow: hidden;
 }
