campos de estudiantes y contactos

--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ruta/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ruta/show.html.twig
@@ -97,7 +97,7 @@
                     <div class="tab-header" id="studentsTab">{%trans%}label.students.in.club{%endtrans%}</div>
                     <section class="tabs-content" style="display: none;" id="studentsSection">
 
-                        <div class="left" id="studentsList">
+                        <div class="left" id="studentsList" style="overflow: scroll; height: 350px;">
                             <div class="row tableHeader">
                                 <div class="option_width" style="float: left; width: 300px;">{% trans %}label.name{% endtrans %}</div>
                             </div>
