--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/edit.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/edit.html.twig
@@ -56,6 +56,18 @@
                         <div class="formErrors">{{ form_errors(form.motherPhone) }}</div>
                         <label><span class="text-form" style="min-width: 150px;">{% trans %}label.motherPhone{% endtrans %}</span>{{ form_widget(form.motherPhone) }}</label>
 
+                        <div class="formErrors">{{ form_errors(form.birthday) }}</div>
+                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.birthday{% endtrans %}</span>{{ form_widget(form.birthday) }}</label>
+
+                        <div class="formErrors">{{ form_errors(form.admission) }}</div>
+                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.admission{% endtrans %}</span>{{ form_widget(form.admission) }}</label>
+
+                        <div class="formErrors">{{ form_errors(form.identification) }}</div>
+                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.identification{% endtrans %}</span>{{ form_widget(form.identification) }}</label>
+
+                        <div class="formErrors">{{ form_errors(form.observation) }}</div>
+                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.observation{% endtrans %}</span>{{ form_widget(form.observation) }}</label>
+
                         <div class="formErrors">{{ form_errors(form.pickUp) }}</div>
                         <label><span class="text-form" style="min-width: 150px;">{% trans %}label.pickUp{% endtrans %}</span>{{ form_widget(form.pickUp) }}</label>
 
