--- a/web/expediente/css/tabs.css
+++ b/web/expediente/css/tabs.css
@@ -40,6 +40,7 @@ html[xmlns] .clearfix {
     /*display: none;*/
 }
 .tabs {
+    min-height: 400px;
     padding-bottom: 0px;
     overflow: hidden;
     background: #e1e1e1;
